# calendar

./: .editorconfig  Makefile  README.md  issue.md  main.md
.github/workflows/: make.yml
base/: CMakeLists.txt  Makefile
base/include/: date.h  month.h
base/src/: date.c  main.c  month.c
c/: .gitignore  CMakeLists.txt  Makefile  test.sh
c/include/: date.h  info.h
c/src/: date.c  info.c  main.c
cpp/: CMakeLists.txt  Makefile  test.sh
cpp/include/: info.hpp
cpp/src/: info.cpp  main.cpp
rust/: Makefile
rust/src/: date.rs  info.rs  main.rs  test.rs
scripts/: install.sh  uninstall.sh
test/: .gitignore  ai.c  ai.cpp  ai.rs  all.c  get_date.c  main.c  test.c
